--- a/MDSCProj/MDSCApp/templates/MDSCApp/instructions.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/instructions.html
@@ -6,7 +6,7 @@
 <div class="container inner-container">
   <center><h2>About</h2></center>
 
-  <p>Welcome to the 2022 (and second) iteration of the MDSC Puzzle Hunt! We hope that this will be an enjoyable side-activity to occupy you during the week. Moreover, there are loads of Challenge Points up for grabs through these puzzles, so give them a go to increase your chances of winning some sweet sweet MDSC merch!</p>
+  <p>Welcome to the 2022 (and second) iteration of the MDSC Puzzle Hunt! We hope that this will be an enjoyable side-activity to occupy you during the week. Moreover, there are a whopping <b>4500 challenge points</b> up for grabs through these puzzles, so give them a go to heavily increase your chances of winning some sweet sweet MDSC merch!</p>
 
   <h5>What are these "puzzles"?</h5>
   <p>The puzzles you find here are of the “puzzle hunt” style. They aren’t jigsaws, nor are they standard crosswords or sudokus. Instead, they come with twists; it is part of each puzzle to figure out what the twists are! These puzzles are all themed around medicine.</p>
@@ -18,16 +18,21 @@
   <center><h2>Instructions</h2></center>
   <h5>Overview</h5>
   <ul>
-    <li>There will be <b>four</b> puzzles this year, each worth <b>????</b> challenge points. They will vary in difficulty.</li>
+    <li>There will be <b>four</b> puzzles this year, each worth <b>500</b> challenge points.</li>
     <li>One puzzle is released at <b>9am each day</b> from Monday 27th June to Thursday 30th June. Puzzles will be open for solution submission as soon as they are released.</li>
-    <li>Puzzle submissions for all puzzles will remain open until <b>11:59pm Friday 1st July</b>. After this time, the solutions will be released, and no further submissions will be accepted. Challenge points accrued during the hunt will be officially tallied after this point.</li>
+    <li>Solution submissions for all puzzles will remain open until <b>11:59pm Friday 1st July</b>. After this time, the solutions will be released, and no further submissions will be accepted. Challenge points accrued during the hunt will be officially tallied after this point.</li>
+    <li><b>Bonus points:</b> If you complete a puzzle within 6 hours of its release (ie. by 3pm), you will be awarded an additional <b>500</b> bonus points for that puzzle.</li>
+    <li><b>Bonus points:</b> If you complete all four puzzles by the close of submissions, you will be awarded an additional <b>500</b> bonus points.</li>
+    
   </ul>
 
   <h5>Puzzle solution submission</h5>
   <ul>
     <li>The solution for each puzzle is a string of letters (ie. comprised of only the 26 letters of the English alphabet).</li>
+    <li>If you think you have the solution for a puzzle, enter it into the solution checker associated with that puzzle.</li>
     <li>The solution checker is case-insensitive and will strip all non-letter characters from your submissions before evaluating them. For example, if you guess <b>I love PuZzLeS!!123</b>, the solution checker will treat this as <b>ILOVEPUZZLES</b>.</li>
     <li>The solution checker will provide feedback about whether your solution is correct.</li>
+    <li>You will be asked to provide your full name and student ID every time you guess. Please ensure that you keep these entries consistent every time you guess (ie. if you use "Joe Bloggs" as your name the first time you make a guess, you must use "Joe Bloggs" for all subsequent guesses.</li>
     <li>You may guess as many times as you like for a puzzle. However, please don't abuse this (eg. don't write a bot to spam guesses) as that will crash the website and ruin the fun for everyone.</li>
   </ul>
 
@@ -35,9 +40,9 @@
   <ul>
     <li>Feel free to work in teams! Many brains make light work. Ensure all members of your team submit correct guesses if you all want the points.</li>
     <li>You can (and are encouraged) to use any resource at your disposal, including the Internet.</li>
-    <li>We recommend using Google Chrome on a computer to view these puzzles, as the website hasn't been optimised for mobile devices or other browsers.</li>
+    <li>We strongly recommend using <b>Google Chrome on a computer or a large tablet</b> to view these puzzles, as the website hasn't been optimised for mobile devices or other browsers.</li>
     <li>If you're stuck and want a hint, send an email to Allen (<a href="mailto:gua@student.unimelb.edu.au">gua@student.unimelb.edu.au</a>).</li>
-    <li>This website hasn't been extensively debugged. If you notice a bug or technical issue, email Allen.
+    <li>This website hasn't been extensively debugged. If you notice a bug or technical issue, email Allen. If the website crashes, be patient and it will be fixed in due course.
     <li>Most importantly, <b>have fun</b>!</li>
   </ul>
 
