--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzles.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzles.html
@@ -12,70 +12,109 @@
         <td style="width: 50%;">
           {% if puzzleState == 0 %}
             <center><div class="puzzle-btn" id="puzzle-btn1">
-              <h4>Puzzle 1 TBA</h4>
+              <h4 style="font-style: italic;">Puzzle 1</h4>
+              <p id="puzzle-btn1-countdown"></p>
             </div></center>
           {% else %}
             <center><div class="puzzle-btn" id="puzzle-btn1">
               <h4>Puzzle 1 NAME</h4>
+              <table style="width:80%;">
+                <tbody style="width:100%">
+                  <tr>
+                    <td class="puzzle-info1">Solves:</td>
+                    <td class="puzzle-info2">1</td>
+                  </tr>
+                  <tr>
+                    <td class="puzzle-info1">Guesses:</td>
+                    <td class="puzzle-info2">2</td>
+                  </tr>
+                </tbody>
+              </table>
               <a href="puzzle1/"><span class="hyperspan"></span></a>
             </div></center>
           {% endif %}
         </td>
         <td style="width: 50%;">
-          {% if puzzleState >= 1%}
-            {% if puzzleState == 1 %}
-              <center><div class="puzzle-btn" id="puzzle-btn2">  
-                <h4>Puzzle 2 TBA</h4>
-              </div></center>
-            {% else %}
-              <center><div class="puzzle-btn" id="puzzle-btn2">  
-                <h4>Wardle</h4>
-                <a href="puzzle2/"><span class="hyperspan"></span></a> 
-              </div></center>
-            {% endif %}
+          {% if puzzleState <= 1 %}
+            <center><div class="puzzle-btn" id="puzzle-btn2">  
+              <h4 style="font-style: italic;">Puzzle 2</h4>
+              <p id="puzzle-btn2-countdown"></p>
+            </div></center>
+          {% else %}
+            <center><div class="puzzle-btn" id="puzzle-btn1">
+              <h4>Puzzle 1 NAME</h4>
+              <table style="width:80%;">
+                <tbody style="width:100%">
+                  <tr>
+                    <td class="puzzle-info1">Solves:</td>
+                    <td class="puzzle-info2">1</td>
+                  </tr>
+                  <tr>
+                    <td class="puzzle-info1">Guesses:</td>
+                    <td class="puzzle-info2">2</td>
+                  </tr>
+                </tbody>
+              </table>
+              <a href="puzzle1/"><span class="hyperspan"></span></a>
+            </div></center>
           {% endif %}
         </td>
       </tr>
 
       <tr>
-        {% if puzzleState >= 2 %}  
-          <td style="width: 50%;">
-            {% if puzzleState == 2 %}
-              <center><div class="puzzle-btn" id="puzzle-btn3">  
-                <h4>Puzzle 3 TBA</h4>
-              </div></center>
-            {% else %}
-              <center><div class="puzzle-btn" id="puzzle-btn3">  
-                <h4>Puzzle 3 NAME</h4>
-                <a href="puzzle3/"><span class="hyperspan"></span></a> 
-              </div></center>
-            {% endif %}
-          </td>
-          <td style="width: 50%;">
-            {% if puzzleState >= 3 %}
-              {% if puzzleState == 3 %}
-                <center><div class="puzzle-btn" id="puzzle-btn4">  
-                  <h4>Puzzle 4 TBA</h4>
-                </div></center>
-              {% else %}
-                <center><div class="puzzle-btn" id="puzzle-btn4">  
-                  <h4>Puzzle 4 NAME</h4>
-                  <a href="puzzle4/"><span class="hyperspan"></span></a> 
-                </div></center>
-              {% endif %}
-            {% endif %}
-          </td>
-        {% else %}
-          <td style="width: 50%;">
-            <center><div class="puzzle-btn" id="puzzle-btn-ghost">
+        <td style="width: 50%;">
+          {% if puzzleState <= 2 %}
+            <center><div class="puzzle-btn" id="puzzle-btn3">  
+              <h4 style="font-style: italic;">Puzzle 3</h4>
+              <p id="puzzle-btn3-countdown"></p>
             </div></center>
-          </td>
-        {% endif %}
+          {% else %}
+            <center><div class="puzzle-btn" id="puzzle-btn1">
+              <h4>Puzzle 1 NAME</h4>
+              <table style="width:80%;">
+                <tbody style="width:100%">
+                  <tr>
+                    <td class="puzzle-info1">Solves:</td>
+                    <td class="puzzle-info2">1</td>
+                  </tr>
+                  <tr>
+                    <td class="puzzle-info1">Guesses:</td>
+                    <td class="puzzle-info2">2</td>
+                  </tr>
+                </tbody>
+              </table>
+              <a href="puzzle1/"><span class="hyperspan"></span></a>
+            </div></center>
+          {% endif %}
+        </td>
+        <td style="width: 50%;">
+          {% if puzzleState <= 3 %}
+            <center><div class="puzzle-btn" id="puzzle-btn4">  
+              <h4 style="font-style: italic;">Puzzle 4</h4>
+              <p id="puzzle-btn4-countdown"></p>
+            </div></center>
+          {% else %}
+            <center><div class="puzzle-btn" id="puzzle-btn1">
+              <h4>Puzzle 1 NAME</h4>
+              <table style="width:80%;">
+                <tbody style="width:100%">
+                  <tr>
+                    <td class="puzzle-info1">Solves:</td>
+                    <td class="puzzle-info2">1</td>
+                  </tr>
+                  <tr>
+                    <td class="puzzle-info1">Guesses:</td>
+                    <td class="puzzle-info2">2</td>
+                  </tr>
+                </tbody>
+              </table>
+              <a href="puzzle1/"><span class="hyperspan"></span></a>
+            </div></center>
+          {% endif %}
+        </td>
       </tr>
     </tbody>
   </table>
-
-
   </center>
 </div>
 
