--- a/MDSCProj/MDSCApp/static/MDSCApp/css/main.css
+++ b/MDSCProj/MDSCApp/static/MDSCApp/css/main.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   background-color: #1e7bca; /* For browsers that do not support gradients */
-  background-image: linear-gradient(to bottom right, #1e7bca, #2ed8a2);
+  background-image: linear-gradient(to bottom right, #1e7bca, #acdb69);
   font-family: 'Solomon Sans';
   font-weight: normal;
   font-style: normal;
