made progress on leaderboard

--- a/MDSCProj/MDSCApp/templates/MDSCApp/index.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/index.html
@@ -14,8 +14,8 @@
       <table style="width: 100%;text-align:center;">
         <tbody style="width: 100%;">
           <tr>
-            <td style="width:50%;"><a class="home-a" href='/instructions/'><h3><b>What are these "puzzles"?</b></h3></a></td>
-            <td style="width:50%;"><a class="home-a" href='/'><h3><b>Let's do some puzzles!</b></h3></a></td>
+            <td style="width:50%;"><a class="home-a" href='/instructions/'><h5><b>What are these "puzzles"?</b></h5></a></td>
+            <td style="width:50%;"><a class="home-a" href='/puzzles/'><h5><b>Let's do some puzzles!</b></h5></a></td>
           </tr>
         </tbody>
       </table>
