--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzles.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzles.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="container">
-  <center><h2>Puzzles</h2>
+  <center><h2>Puzzles List (State: {{puzzleState}})</h2>
 
   <table style="width:80%;">
     <tbody style="width:100%">
@@ -30,7 +30,7 @@
                   </tr>
                 </tbody>
               </table>
-              <a href="puzzle1/"><span class="hyperspan"></span></a>
+              <a href="/puzzle/1/"><span class="hyperspan"></span></a>
             </div></center>
           {% endif %}
         </td>
@@ -55,7 +55,7 @@
                   </tr>
                 </tbody>
               </table>
-              <a href="puzzle1/"><span class="hyperspan"></span></a>
+              <a href="/puzzle/2/"><span class="hyperspan"></span></a>
             </div></center>
           {% endif %}
         </td>
@@ -83,7 +83,7 @@
                   </tr>
                 </tbody>
               </table>
-              <a href="puzzle1/"><span class="hyperspan"></span></a>
+              <a href="/puzzle/3/"><span class="hyperspan"></span></a>
             </div></center>
           {% endif %}
         </td>
@@ -108,7 +108,7 @@
                   </tr>
                 </tbody>
               </table>
-              <a href="puzzle1/"><span class="hyperspan"></span></a>
+              <a href="/puzzle/4/"><span class="hyperspan"></span></a>
             </div></center>
           {% endif %}
         </td>
