--- a/MDSCProj/MDSCApp/static/MDSCApp/css/fonts.css
+++ b/MDSCProj/MDSCApp/static/MDSCApp/css/fonts.css
@@ -1,4 +1,4 @@
-@font-face {
+/*@font-face {
     font-family: 'Solomon Sans';
     src: url('Solomon Sans/Solomon Sans Normal.otf');
     font-weight: normal;
@@ -24,4 +24,29 @@
     src: url('Solomon Sans/Solomon Sans Black Italic.otf');
     font-weight: bold;
     font-style: italic;
+}*/
+
+/*
+@font-face {
+    font-family: 'Noto Sans';
+    font-weight: normal;
+    font-style: normal;
 }
+
+@font-face {
+    font-family: 'Noto Sans';
+    font-weight: normal;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Noto Sans';
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Noto Sans';
+    font-weight: bold;
+    font-style: italic;
+}*/
