--- a/MDSCProj/MDSCApp/static/MDSCApp/css/main.css
+++ b/MDSCProj/MDSCApp/static/MDSCApp/css/main.css
@@ -3,10 +3,10 @@
 .mdsc-grad {
   /*height: 200px;*/
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   background-color: #1e7bca; /* For browsers that do not support gradients */
   background-image: linear-gradient(to bottom right, #1e7bca, #acdb69);
-  font-family: 'Solomon Sans';
+  font-family: 'Noto Sans';
   font-weight: normal;
   font-style: normal;
   font-size: 13pt;
@@ -17,7 +17,7 @@
 }
 
 html, body {
-  min-height: 100%;
+    min-height: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -36,6 +36,11 @@ h1, h2, h3, h4, h5, h6 {
   padding: 20px;
   margin-top: 20px;
   margin-bottom: 20px;
+}
+
+.solve-container {
+  max-width: 60%;
+  margin: auto;
 }
 
 #footer {
@@ -115,13 +120,13 @@ h1, h2, h3, h4, h5, h6 {
   text-align: right;
   font-weight: bold;
   padding-right: 0.5em;
-  width: 60%;
+  width: 55%;
 }
 
 .puzzle-info2{
   text-align: left;
   padding-left: 0.5em;
-  width: 40%;
+  width: 45%;
 }
 
 .hyperspan {
@@ -132,3 +137,6 @@ h1, h2, h3, h4, h5, h6 {
   top:0;
 }
 
+.alert {
+  text-align: center;
+}
