--- a/MDSCProj/MDSCApp/templates/MDSCApp/index.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/index.html
@@ -11,16 +11,8 @@
       <br><br><br>
       <h4>Puzzles are released <b>daily at 9am</b>, starting on <b>Monday 27th June</b></h4>
       <br>
-      <table style="width: 100%;text-align:center;">
-        <tbody style="width: 100%;">
-          <tr>
-            <td style="width:50%;"><a class="home-a" href='/instructions/'><h5><b>What are these "puzzles"?</b></h5></a></td>
-            <td style="width:50%;"><a class="home-a" href='/puzzles/'><h5><b>Let's do some puzzles!</b></h5></a></td>
-          </tr>
-        </tbody>
-      </table>
-
-
+      <a class="home-a" href='/instructions/'><h5><b>What are these "puzzles"?</b></h5></a>
+      <a class="home-a" href='/puzzles/'><h5><b>Let's do some puzzles!</b></h5></a>
     </center>
     <h1></h1>
   </div>
