--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/puzzle2.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/puzzle2.html
@@ -1,10 +1,11 @@
 {% extends 'MDSCApp/base.html' %}
 {% load static %}
-{% block title %}Puzzle 1: {% endblock %}
+
+{% block title %}Puzzle 2: Wardle{% endblock %}
 
 {% block content %}
 <div class="container inner-container">
-  <center><h2>Puzzle 1: </h2></center>
+  <center><h2>Puzzle 2: Wardle</h2></center>
 
   
 
