--- a/MDSCProj/MDSCApp/templates/MDSCApp/instructions.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/instructions.html
@@ -30,12 +30,7 @@
     <li>If you think you have the solution for a puzzle, enter it into the solution checker associated with that puzzle.</li>
     <li>The solution checker is case-insensitive and will strip all non-letter characters from your submissions before evaluating them. For example, if you guess <b>I love PuZzLeS!!123</b>, the solution checker will treat this as <b>ILOVEPUZZLES</b>.</li>
     <li>The solution checker will provide feedback about whether your solution is correct.</li>
-    <li>You will be asked to provide your Student ID and full name every time you guess.
-      <ul>
-        <li>Please ensure that your <b>Student ID is correct</b>, otherwise you will not receive points for correct answers!</li>
-        <li><b>Keep your name consistent</b> (ie. if you use "Joe Bloggs" the first time you guess, you must use "Joe Bloggs" for all subsequent guesses.</li>
-        <li>Your information will be kept strictly confidential.</li>
-      </ul></li>
+    <li>You will be asked to provide your Student ID and full name every time you guess. Please ensure that your <b>Student ID is correct</b>, otherwise you will not receive points for correct answers!</li>
     <li>You may guess as many times as you like for a puzzle. However, please don't abuse this (eg. don't write a bot to spam guesses) as that will crash the website and ruin the fun for everyone.</li>
   </ul>
 
