--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzles.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzles.html
@@ -30,11 +30,11 @@
                 <table style="width:80%;">
                   <tbody style="width:100%">
                     <tr>
-                      <td class="puzzle-info1">Solves:</td>
+                      <td class="puzzle-info1">#Solves:</td>
                       <td class="puzzle-info2">{{puz.solves}}</td>
                     </tr>
                     <tr>
-                      <td class="puzzle-info1">Guesses:</td>
+                      <td class="puzzle-info1">#Guesses:</td>
                       <td class="puzzle-info2">{{puz.guesses}}</td>
                     </tr>
                   </tbody>
