--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/puzzle2.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/puzzle2.html
@@ -4,12 +4,46 @@
 {% block title %}Puzzle 2: Wardle{% endblock %}
 
 {% block content %}
+
+      
 <div class="container inner-container">
-  <center><h2>Puzzle 2: Wardle</h2></center>
+  <center>
+    <h4>Puzzle {{puzInfo.puzId}}</h4>
+    <h2>{{puzInfo.title}}</h2>
+    <a class="btn btn-success" href="/solve/2/">Submit a guess</a>
+  </center>
+  <br>
+  <p class="flavourtext">
+    After a gruelling ward round, you decide to have a break and play a few rounds of your favourite word game. Trouble is, there are so many to attempt. When will they end?
+  </p>
 
-  
-
+  <div class="wardle-cards">
+    {% for wardle in "123456" %}
+      {% if wardle in "14" %}
+        <div class="row">
+      {% endif %}
+        <div class="col-sm-4">
+          <div class="card ward-card" >
+            {% if wardle == "6" %}
+              <a href="/wardle/infinity/">
+            {% else %}
+              <a href="/wardle/{{wardle}}/">
+            {% endif %}
+              <div class="card-body" style="text-align: center; vertical-align: center;">
+                {% if wardle == "6" %}
+                  <h4>Wardle #♾️</h4>
+                {% else %}
+                  <h4>Wardle #{{wardle}}</h4>
+                {% endif %}
+              </div>
+            </a>
+          </div>
+        </div>
+      {% if wardle in "36" %}
+        </div>
+      {% endif %}
+    {% endfor %}
+  </div>
 </div>
-
 
 {% endblock %}
