--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/solved.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/solved.html
@@ -2,19 +2,20 @@
 {% load crispy_forms_tags %}
 {% load static %}
 
-{% block title %}Puzzle 1: Check{% endblock %}
+{% block title %}Correct{% endblock %}
 
 {% block content %}
 <div class="solve-container inner-container">
   <center>
     <h2>Solution Checker</h2>
-    <h4>Puzzle {{puzzleId}}</h4>
-    <h4>{{title}}</h4>
+    <h4>Puzzle {{puzInfo.puzId}}</h4>
+    <h4>{{puzInfo.title}}</h4>
   </center>
 
   <div class="alert alert-success" role="alert">
     <h5>Correct!</h5>
-    <p>Your guess of <b>{{guess}}</b> was correct, and this has earned you {{points}} points!</p>
+    <p>Your guess of <b>{{guess}}</b> was correct, earning you <b>{{points}} points</b>!</p>
+    <p><a href='/leaderboard/'>Click here</a> to view your place on the leaderboard.</p>
   </div>
 
 </div>
