production ready commit

--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzles.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzles.html
@@ -8,7 +8,7 @@
 <div class="container">
   <center>
     <br>
-    <h2>Puzzles List (State: {{puzzleState}})</h2>
+    <h2>Puzzles List</h2>
   </center>
 
 <div class="container">
