--- a/MDSCProj/MDSCApp/templates/MDSCApp/credits.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/credits.html
@@ -7,8 +7,8 @@
   <center><h2>Credits</h2></center>
 
   <ul>
-    <li><b>Daniel Tao</b> (MDSC Convenor, MD3)</li>
-    <li><b>Allen Gu</b> (MD4)</li>
+    <li><b>Daniel Tao (MDSC Convenor, MD3)</b>: Puzzle writing</li>
+    <li><b>Allen Gu (MD4)</b>: Puzzle writing, website</li>
   </ul>
 
 </div>
