--- a/MDSCProj/MDSCApp/templates/MDSCApp/instructions.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/instructions.html
@@ -12,7 +12,7 @@
   <p>The puzzles you find here are of the “puzzle hunt” style. They aren’t jigsaws, nor are they standard crosswords or sudokus. Instead, they come with twists; it is part of each puzzle to figure out what the twists are! These puzzles are all themed around medicine.</p>
 
   <h5>Can I see some examples of puzzles?</h5>
-  <p>Check out <a href="https://drive.google.com/file/d/1yjbBRI56ca4VJ-2kHFSznsOQ5wy6OQfF/" target="_blank">last year's puzzles</a> and <a href='https://drive.google.com/file/d/1I_1MPbVWTbGgdEf_8iGmCG9HcZoxN43y' target="_blank">their solutions</a> to give you a taste of what these puzzles are like. However, we've slightly changed the way this puzzle hunt works this year, so please read on for detailed instructions.</p>
+  <p>Check out <a href="https://drive.google.com/file/d/1yjbBRI56ca4VJ-2kHFSznsOQ5wy6OQfF/" target="_blank">last year's puzzles</a> and <a href='https://drive.google.com/file/d/1I_1MPbVWTbGgdEf_8iGmCG9HcZoxN43y' target="_blank">their solutions</a> to give you a taste of what these puzzles are like. However, we've slightly changed a few rules about this year's puzzle hunt, so please read on for detailed instructions.</p>
 
   <hr>
   <center><h2>Instructions</h2></center>
@@ -20,8 +20,8 @@
   <ul>
     <li>There will be <b>four</b> puzzles this year, each worth <b>500</b> challenge points.</li>
     <li>One puzzle is released at <b>9am each day</b> from Monday 27th June to Thursday 30th June. Puzzles will be open for solution submission as soon as they are released.</li>
-    <li>Solution submissions for all puzzles will remain open until <b>11:59pm Friday 1st July</b>. After this time, the solutions will be released, and no further submissions will be accepted. Challenge points accrued during the hunt will be officially tallied after this point.</li>
-    <li><b>Bonus points:</b> If you complete a puzzle within 6 hours of its release (ie. by 3pm), you will be awarded an additional <b>500</b> bonus points for that puzzle.</li>    
+    <li>Solution submissions for <b>all puzzles</b> will remain open until <b>11:59pm Friday 1st July</b>. After this time, the solutions will be released, and no further submissions will be accepted.</li>
+    <li><b>Bonus points:</b> If you complete a puzzle within 6 hours of its release (ie. by 3pm), you will be awarded an additional <b>500</b> bonus points for that puzzle.</li>
   </ul>
 
   <h5>Puzzle solution submission</h5>
