--- a/MDSCProj/MDSCApp/templates/MDSCApp/semantic_base.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/semantic_base.html
@@ -19,6 +19,15 @@
       <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="{% static 'MDSCApp/css/main.css'%}">
       <link rel="shortcut icon" href="{% static 'MDSCApp/img/MDSCLogo2.ico' %}"> 
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-6RLMWCS1VS"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-6RLMWCS1VS');
+      </script>
     {% endblock %}
   </head>
   <body>
