--- a/MDSCProj/MDSCApp/templates/MDSCApp/index.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/index.html
@@ -7,7 +7,7 @@
     <center>
       <br>
       <h2>Welcome to</h2>
-      <img src="/static/MDSCApp/img/Logo_text_puzzle3.png" alt="MDSC Logo" style="min-width:60%;max-width:65%;padding-left:20px;padding-top:10px">
+      <img src="/static/MDSCApp/img/Logo_text_puzzle3.png" alt="MDSC Logo" style="width: min(100%, 1200px);padding-top:10px">
       <br><br><br>
       <h4>Puzzles are released <b>daily at 9am</b>, starting on <b>Monday 27th June</b></h4>
       <br>
