--- a/MDSCProj/MDSCApp/templates/MDSCApp/base.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/base.html
@@ -41,7 +41,7 @@
   <footer class="footer" id="footer">
       University of Melbourne MD Student Conference
       <br>
-      Copyright © 2022 Allen Gu
+      Copyright © 2022
   </div>
 </div>
 {% endblock %}
