--- a/MDSCProj/MDSCApp/templates/MDSCApp/base.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/base.html
@@ -24,7 +24,7 @@
               <a class="nav-link" href="/leaderboard/">Leaderboard</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/credits/" tabindex="-1">Credits</a>
+              <a class="nav-link" href="/announcements/">Announcements</a>
             </li>
           </ul>
         </div>
