--- a/MDSCProj/MDSCApp/templates/MDSCApp/instructions.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/instructions.html
@@ -6,13 +6,16 @@
 <div class="container inner-container">
   <center><h2>About</h2></center>
 
-  <p>Welcome to the 2022 (and second) iteration of the MDSC Puzzle Hunt! We hope that this will be an enjoyable side-activity to occupy you during the week. Moreover, there are a whopping <b>4000 challenge points</b> up for grabs through these puzzles, so give them a go to heavily increase your chances of winning some sweet sweet MDSC merch!</p>
+  <p>Welcome to the 2022 (and second) iteration of the MDSC Puzzle Hunt! We hope that this will be an enjoyable side-activity to occupy you during the week. Moreover, there are a whopping <b>4000 challenge points</b> up for grabs through these puzzles, so solving them will heavily increase your chances of winning some sweet sweet MDSC merch!</p>
 
   <h5>What are these "puzzles"?</h5>
-  <p>The puzzles you find here are of the “puzzle hunt” style. They aren’t jigsaws, nor are they standard crosswords or sudokus. Instead, they come with twists; it is part of each puzzle to figure out what the twists are! These puzzles are all themed around medicine.</p>
+  <p>These puzzles are of the “puzzle hunt” style. They aren’t jigsaws, nor are they standard crosswords or sudokus. Instead, they come with twists; it is part of each puzzle to figure out what the twists are! These puzzles are all themed around medicine.</p>
 
   <h5>Can I see some examples of puzzles?</h5>
-  <p>Check out <a href="https://drive.google.com/file/d/1yjbBRI56ca4VJ-2kHFSznsOQ5wy6OQfF/" target="_blank">last year's puzzles</a> and <a href='https://drive.google.com/file/d/1I_1MPbVWTbGgdEf_8iGmCG9HcZoxN43y' target="_blank">their solutions</a> to give you a taste of what these puzzles are like. However, we've slightly changed a few rules about this year's puzzle hunt, so please read on for detailed instructions.</p>
+  <p>Check out <a href="https://drive.google.com/file/d/1yjbBRI56ca4VJ-2kHFSznsOQ5wy6OQfF/" target="_blank">last year's puzzles</a> and <a href='https://drive.google.com/file/d/1I_1MPbVWTbGgdEf_8iGmCG9HcZoxN43y' target="_blank">their solutions</a>. However, we've <b>significantly changed</b> how this year's puzzle hunt runs, so please read on for detailed instructions.</p>
+
+  <h5>Credits</h5>
+  <p>Puzzle-writing and website credits go to <b>Allen Gu</b> (MD4) and <b>Daniel Tao</b> (MDSC Convenor, MD3). Let us know what you think of our puzzles if you run into us at the conference!</p>
 
   <hr>
   <center><h2>Instructions</h2></center>
@@ -21,29 +24,30 @@
     <li>There will be <b>four</b> puzzles this year, each worth <b>500</b> challenge points.</li>
     <li>One puzzle is released at <b>9am each day</b> from Monday 27th June to Thursday 30th June. Puzzles will be open for solution submission as soon as they are released.</li>
     <li>Solution submissions for <b>all puzzles</b> will remain open until <b>11:59pm Friday 1st July</b>. After this time, the solutions will be released, and no further submissions will be accepted.</li>
-    <li><b>Bonus points:</b> If you complete a puzzle within 9 hours of its release (ie. by 6pm), you will be awarded an additional <b>500</b> bonus points for that puzzle.</li>
+    <li><b>Bonus points:</b> If you solve a puzzle within 9 hours of its release (ie. by 6pm), you will receive an additional <b>500</b> bonus points for that puzzle.</li>
+    <li>If you're really stuck on a puzzle and want a hint, send an email to Allen (<a href="mailto:gua@student.unimelb.edu.au">gua@student.unimelb.edu.au</a>) outlining your progress.</li>
   </ul>
 
   <h5>Puzzle solution submission</h5>
   <ul>
-    <li>The solution for each puzzle is a string of letters (ie. comprised of only the 26 letters of the English alphabet).</li>
+    <li>The solution for each puzzle is a short string of letters (ie. comprised of only the 26 letters of the English alphabet).</li>
     <li>If you think you have the solution for a puzzle, enter it into the solution checker associated with that puzzle.</li>
     <li>The solution checker is case-insensitive and will strip all non-letter characters from your submissions before evaluating them. For example, if you guess <b>I love PuZzLeS!!123</b>, the solution checker will treat this as <b>ILOVEPUZZLES</b>.</li>
-    <li>The solution checker will provide feedback about whether your solution is correct.</li>
-    <li>You will be asked to provide your Student ID and full name every time you guess. Please ensure that your <b>Student ID is correct</b>, otherwise you will not receive points for correct answers!</li>
-    <li>You may guess as many times as you like for a puzzle. However, please don't abuse this (eg. don't write a bot to spam guesses) as that will crash the website and ruin the fun for everyone.</li>
+    <li>The solution checker will tell you whether your submitted guess is correct.</li>
+    <li>You need to provide your Student ID and full name every time you guess. Please ensure that your <b>Student ID is correct</b>, otherwise you will not receive points for correct solutions!</li>
+    <li>You have an <b>unlimited number of guesses</b> for every puzzle. However, please don't abuse this by spamming guesses constantly, as that might crash the website and ruin the fun for everyone.</li>
   </ul>
 
   <h5>Miscellaneous instructions</h5>
   <ul>
     <li>Feel free to work in teams! Many brains make light work. Ensure all members of your team submit correct guesses if you all want the points.</li>
-    <li>You can (and are encouraged) to use any resource at your disposal, including the Internet.</li>
-    <li>We strongly recommend using <b>Google Chrome on a computer or a large tablet</b> to view these puzzles, as the website hasn't been optimised for mobile devices or other browsers.</li>
-    <li>If you're stuck and want a hint, send an email to Allen (<a href="mailto:gua@student.unimelb.edu.au">gua@student.unimelb.edu.au</a>).</li>
-    <li>This website hasn't been extensively debugged. If you notice a bug or technical issue, email Allen. If the website crashes, be patient and it will be fixed in due course.
+    <li>You can (and are encouraged to) use any resource at your disposal, including the Internet, Google, Wikipedia, reverse image searching etc.</li>
+    <li>We strongly recommend using <b>Google Chrome on a computer or a large tablet</b> to view these puzzles. Website performance may vary on mobile devices and other browsers.</li>
+    <li>This website hasn't been extensively debugged. If you notice a bug or technical issue, email Allen (<a href="mailto:gua@student.unimelb.edu.au">gua@student.unimelb.edu.au</a>). If the website crashes, be patient and it will be fixed in due course.</li>
+    <li>Points earned through puzzles will not automatically be tallied in the MDSC App; instead, the App will be updated with puzzle points daily. Go to the <a href="/leaderboard/">puzzles leaderboard</a> to keep track of earned puzzle points.</li>
+    <li>Keep an eye on the <a href="/announcements/">announcements page</a> for important puzzle-related updates.</li>
     <li>Most importantly, <b>have fun</b>!</li>
   </ul>
-
 </div>
 
 
