Update index page

--- a/MDSCProj/MDSCApp/templates/MDSCApp/index.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/index.html
@@ -9,7 +9,8 @@
       <h2>Welcome to</h2>
       <img src="/static/MDSCApp/img/Logo_text_puzzle3.png" alt="MDSC Logo" style="width: min(100%, 900px);padding-top:10px">
       <br><br><br>
-      <h4>Puzzles are released <b>daily at 9am</b>, starting on <b>Monday 27th June</b></h4>
+      <h4>Puzzles are released <b>daily at 9am</b>, starting on <b>Monday 27th June.</b></h4>
+      <h4>Solve them to win a total of <b>4000</b> challenge points!</h4>
       <br>
       <a class="home-a" href='/instructions/'><h5><b>What are these "puzzles"?</b></h5></a>
       <a class="home-a" href='/puzzles/'><h5><b>Let's do some puzzles!</b></h5></a>
