--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/puzzle1.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/puzzle1.html
@@ -32,7 +32,7 @@
       <br><span class="puz-1-br"></span>... who founded the medical school attended by...
       <br><span class="puz-1-br"></span>... who had a famous rivalry with...
       <br><span class="puz-1-br"></span>... who hails from the same country as...
-      <br><span class="puz-1-br"></span>... who inherited the same honour a year after...
+      <br><span class="puz-1-br"></span>... who was appointed to the same honour a year after...
       <br><span class="puz-1-br"></span>... who is a professor at the same institution as...
       <br><span class="puz-1-br"></span>... who named a neonatal assessment score after...
       <br><span class="puz-1-br"></span>... who won a prize named in part after...
