moved wardle to ajax

--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/puzzle2.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/puzzle2.html
@@ -13,7 +13,7 @@
     <a class="btn btn-success" href="/solve/2/">Submit a guess</a>
     <br><br>
     <p class="flavourtext">
-      After a gruelling ward round, you decide to have a break and play a few rounds of your favourite word game. Trouble is, there are so many to attempt.
+      After a gruelling consultant word round, you decide to have a break and play a few rounds of your favourite ward game. Trouble is, there are so many to attempt.
     </p>
   </center>
   
