--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/wardle.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/wardle.html
@@ -11,7 +11,11 @@
   <center>
     <a href="/puzzle/2/"><h5>⬅ Back to Puzzle 2: Wardle</h5></a>
     <br>
-    <h3>Wardle #5</h3>
+    {% if wardleId in "12345" %}
+      <h3>Wardle #{{wardleId}}</h3>
+    {% else %}
+      <h3>Wardle #♾️</h3>
+    {% endif %}
 
   </center>
 
@@ -84,6 +88,23 @@
 
 </div>
 
-<script src="{% static 'MDSCApp/js/ward/ward5.js' %}" type="text/javascript"></script>
+<script>
+  $.ajax({
+    type: 'GET',
+    url: "/wardleAjax/",
+    data: {"wardleId":"{{wardleId}}"},
+    success: function (response) {
+        const dictionary = response["dictionary"];
+        const targetWord = response["targetWord"];
+        grandCall(dictionary, targetWord);
+        
+    },
+    error: function (response) {
+        alert("An issue has occurred! Please contact Allen.");
+    }
+  })
+</script>
+
+<script src="{% static 'MDSCApp/js/ward.js' %}" type="text/javascript"></script>
 
 {% endblock %}
