--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/wardle.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/wardle.html
@@ -7,7 +7,7 @@
 
 <link rel="stylesheet" type="text/css" href="{% static 'MDSCApp/css/ward.css'%}">
 
-<div class="container inner-container" style="padding-left:0px; padding-right:0px">
+<div class="container inner-container" style="padding-left:0px; padding-right:0px; border-color: #235c4a;">
   <center>
     <a href="/puzzle/2/"><h5>⬅ Back to Puzzle 2: Wardle</h5></a>
     <br>
